Fixing Hot Reload on Development Not working

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,6 @@ services:
         - repo_organization={YOURORGANIZATION}
         - app_name={APPNAME}
     volumes: 
-      - .:/go/src/app
-      - ./empty:/go/src/app/docker
+      - .:/app
     ports: 
       - 8080:8080
